--- a/offers.html
+++ b/offers.html
@@ -647,7 +647,8 @@ function scrollToSections() {
       <script src="JS/swiper.js"></script>
       <script src="JS/main.js"></script>
       <script src="JS/submit_checkout.js"></script>
-      <!-- <script src="JS/electonics.js"></script> -->
+      <script src="JS/electonics.js"></script>
       <script src="JS/offers.js"></script>
+      <script src="JS/items_home.js"></script>
 </body>
 </html>
