--- a/contact.html
+++ b/contact.html
@@ -338,8 +338,6 @@
     </div>
 
   </header>
-  <!-- Mobile Bottom Nav Bar -->
-
 
 <!-- Mobile Bottom Nav Bar -->
 <nav class="mobile_bottom_nav">
@@ -536,7 +534,7 @@ function toggleMobileSub(el) {
       <h3>واتساب</h3>
       <p>تواصل معنا مباشرة على الواتساب.</p>
       <br>
-      <a href="https://wa.me/012 87720314" target="_blank" class="contact-btn" style="color: #f9f9f9;">إرسال رسالة</a>
+      <a href="https://wa.me/+20 012 87720314" target="_blank" class="contact-btn" style="color: #f9f9f9;">إرسال رسالة</a>
     </div>
   </section>
 
