update heart icon and cart count in mobile

--- a/freezer.html
+++ b/freezer.html
@@ -346,12 +346,15 @@
             </a>
         </li>
 
- <li>
+<li>
     <a href="checkout.html" class="cart-icon-mobile">
         <i class="fa-solid fa-cart-shopping"></i>
+        <span class="cart-badge-mobile">0</span>
         <span>السلة</span>
     </a>
 </li>
+
+
         <li>
             <a href="contact.html">
                 <i class="fa-solid fa-phone"></i>
