--- a/blog.html
+++ b/blog.html
@@ -430,9 +430,10 @@
             </a>
         </li>
 
- <li>
+<li>
     <a href="checkout.html" class="cart-icon-mobile">
         <i class="fa-solid fa-cart-shopping"></i>
+        <span class="cart-badge-mobile">0</span>
         <span>السلة</span>
     </a>
 </li>
